Add pprof binary

--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -75,6 +75,7 @@ RUN set -x \
         automake \
         libtool \
         linux-headers \
+        go \
     && : "---------- gperftools ----------" \
     && mkdir -p /usr/src/gperftools \
     && git clone "$GPERFTOOLS_REPO" /usr/src/gperftools \
@@ -86,6 +87,8 @@ RUN set -x \
         ./configure; \
         make; \
         cp .libs/libprofiler.so* /usr/local/lib;) \
+    && (GOPATH=/usr/src/go go get github.com/google/pprof; \
+        cp /usr/src/go/bin/pprof /usr/local/bin) \
     && : "---------- tarantool ----------" \
     && mkdir -p /usr/src/tarantool \
     && git clone "$TARANTOOL_DOWNLOAD_URL" /usr/src/tarantool \
@@ -129,6 +132,7 @@ RUN set -x \
     && rm -r /usr/src/luarocks \
     && rm -rf /usr/src/tarantool \
     && rm -rf /usr/src/gperftools \
+    && rm -rf /usr/src/go \
     && : "---------- remove build deps ----------" \
     && apk del .build-deps
 
