Upgrade tarantool-curl to 2.2.3

--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -32,7 +32,7 @@ ENV TARANTOOL_VERSION=1.7.3-32-g0dd09b1 \
     LUAROCK_TARANTOOL_PROMETHEUS_REPO=https://github.com/tarantool/prometheus.git \
     LUAROCK_TARANTOOL_PROMETHEUS_TAG=0654304 \
     LUAROCK_TARANTOOL_CURL_REPO=https://github.com/tarantool/curl.git \
-    LUAROCK_TARANTOOL_CURL_TAG=900b3fd \
+    LUAROCK_TARANTOOL_CURL_TAG=2.2.3 \
     LUAROCK_MQTT_REPO=https://github.com/tarantool/mqtt.git \
     LUAROCK_MQTT_TAG=238fd2e \
     LUAROCK_TARANTOOL_GIS_REPO=https://github.com/tarantool/gis.git \
@@ -147,6 +147,7 @@ RUN set -x \
         cyrus-sasl \
         libcurl \
         mosquitto-libs \
+        libev \
     && apk add --no-cache --virtual .build-deps \
         git \
         cmake \
@@ -160,6 +161,7 @@ RUN set -x \
         cyrus-sasl-dev \
         curl-dev \
         mosquitto-dev \
+        libev-dev \
     && mkdir -p /rocks \
     && : "---------- proj (for gis module) ----------" \
     && wget -O proj.tar.gz http://download.osgeo.org/proj/proj-4.9.3.tar.gz \
