--- a/1.5/Dockerfile
+++ b/1.5/Dockerfile
@@ -9,7 +9,11 @@ ENV TARANTOOL_VERSION=1.5.5.27 \
     TARANTOOL_DOWNLOAD_URL=https://github.com/tarantool/tarantool.git \
     TARANTOOL_COMMIT=1687c022e7aa93e9c118e1b80e1eac6c429b1010 \
     TARANTOOL_INSTALL_LUADIR=/usr/local/share/tarantool \
-    LUAROCKS_URL=http://keplerproject.github.io/luarocks/releases/luarocks-2.3.0.tar.gz
+    LUAROCKS_URL=http://keplerproject.github.io/luarocks/releases/luarocks-2.3.0.tar.gz \
+    TARANTOOL_SNAP_DIR=/var/lib/tarantool \
+    TARANTOOL_WAL_DIR=/var/lib/tarantool \
+    TARANTOOL_PORT=3301 \
+    TARANTOOL_ADMIN_PORT=3302
 
 RUN set -x \
     && apk add --no-cache --virtual .run-deps \
