--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -5,7 +5,7 @@ RUN addgroup -S tarantool \
     && adduser -S -G tarantool tarantool \
     && apk add --no-cache 'su-exec>=0.2'
 
-ENV TARANTOOL_VERSION=1.7.5-0-g24b70de10 \
+ENV TARANTOOL_VERSION=1.7.5-250-g8c55b4993 \
     TARANTOOL_DOWNLOAD_URL=https://github.com/tarantool/tarantool.git \
     TARANTOOL_INSTALL_LUADIR=/usr/local/share/tarantool \
     GPERFTOOLS_REPO=https://github.com/gperftools/gperftools.git \
@@ -58,6 +58,7 @@ RUN set -x \
         zip \
         libunwind \
         libcurl \
+        icu \
     && apk add --no-cache --virtual .build-deps \
         perl \
         gcc \
@@ -80,6 +81,7 @@ RUN set -x \
         linux-headers \
         go \
         curl-dev \
+        icu-dev \
     && : "---------- gperftools ----------" \
     && mkdir -p /usr/src/gperftools \
     && git clone "$GPERFTOOLS_REPO" /usr/src/gperftools \
