--- a/1.x-centos7/Dockerfile
+++ b/1.x-centos7/Dockerfile
@@ -11,6 +11,7 @@ ENV TARANTOOL_VERSION=1.9.1-11-gcd17b77f9 \
     LUAROCK_SHARD_REPO=https://github.com/tarantool/shard.git \
     LUAROCK_SHARD_TAG=8f8c5a7 \
     LUAROCK_CHECKS_VERSION=1.0.0 \
+    LUAROCK_AVRO_SCHEMA_VERSION=2.0.1 \
     LUAROCK_EXPERATIOND_VERSION=1.0.1 \
     LUAROCK_QUEUE_VERSION=1.0.2 \
     LUAROCK_CONNPOOL_VERSION=1.1.1 \
