Add real wget installation
Native busybox wget emulation fails to check github.com certificate

--- a/1.x/Dockerfile
+++ b/1.x/Dockerfile
@@ -69,6 +69,7 @@ RUN set -x \
         go \
         curl-dev \
         icu-dev \
+        wget \
     && : "---------- gperftools ----------" \
     && mkdir -p /usr/src/gperftools \
     && git clone "$GPERFTOOLS_REPO" /usr/src/gperftools \
