Add real wget in 1.* and 2.x docker files
It is needed to successfully pass github.com certificate validation. The
commit is follow up of 0ae0c261b0e6e79dc45a16bc3ca1db36cc5e4989.

--- a/1.5/Dockerfile
+++ b/1.5/Dockerfile
@@ -50,6 +50,7 @@ RUN set -x \
         postgresql-dev \
         lua-dev \
         mariadb-dev \
+        wget \
     && : "---------- tarantool ----------" \
     && mkdir -p /usr/src/tarantool \
     && git clone "$TARANTOOL_DOWNLOAD_URL" /usr/src/tarantool \
