--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -69,6 +69,7 @@ RUN set -x \
         go \
         curl-dev \
         icu-dev \
+        wget \
     && : "---------- gperftools ----------" \
     && mkdir -p /usr/src/gperftools \
     && git clone "$GPERFTOOLS_REPO" /usr/src/gperftools \
