Backport curl / http.client crash workaround
Updated 1.6, 1.7 and 2.x (1.x was updated before). 1.5 didn't updated,
because tarantool-1.5 does not require curl itself and tarantool/curl
seems to support only 1.6+ (as rpm dependencies suggests).

Moved from openssl for libressl in 1.6, because git clone fails after
installing curl builded from source with openssl (don't sure about an
exact reason). 1.7 and later already use libressl.

CentOS 7 have curl 7.29, so the 1.x-centos7 image is not affected.

The problem we workaround is described here:
https://github.com/tarantool/tarantool/issues/3569

Fixes #59.

--- a/1.6/Dockerfile
+++ b/1.6/Dockerfile
@@ -8,6 +8,8 @@ RUN addgroup -S tarantool \
 ENV TARANTOOL_VERSION=1.6.9-11-gf4619d0 \
     TARANTOOL_DOWNLOAD_URL=https://github.com/tarantool/tarantool.git \
     TARANTOOL_INSTALL_LUADIR=/usr/local/share/tarantool \
+    CURL_REPO=https://github.com/curl/curl.git \
+    CURL_TAG=curl-7_59_0 \
     GPERFTOOLS_REPO=https://github.com/gperftools/gperftools.git \
     GPERFTOOLS_TAG=gperftools-2.5 \
     LUAROCKS_URL=http://keplerproject.github.io/luarocks/releases/luarocks-2.3.0.tar.gz \
@@ -46,22 +48,22 @@ RUN set -x \
     && apk add --no-cache --virtual .run-deps \
         libstdc++ \
         readline \
-        openssl \
+        libressl \
         yaml \
         lz4 \
         binutils \
         ncurses \
         libgomp \
         lua \
-        curl \
         tar \
         zip \
+        ca-certificates \
     && apk add --no-cache --virtual .build-deps \
         gcc \
         g++ \
         cmake \
         readline-dev \
-        openssl-dev \
+        libressl-dev \
         yaml-dev \
         lz4-dev \
         binutils-dev \
@@ -77,6 +79,15 @@ RUN set -x \
         linux-headers \
         go \
         wget \
+    && : "---------- curl ----------" \
+    && mkdir -p /usr/src/curl \
+    && git clone "$CURL_REPO" /usr/src/curl \
+    && git -C /usr/src/curl checkout "$CURL_TAG" \
+    && (cd /usr/src/curl \
+        && ./buildconf \
+        && ./configure --prefix "/usr/local" \
+        && make -j \
+        && make install) \
     && : "---------- gperftools ----------" \
     && mkdir -p /usr/src/gperftools \
     && git clone "$GPERFTOOLS_REPO" /usr/src/gperftools \
@@ -144,7 +155,6 @@ RUN set -x \
         mariadb-client-libs \
         libpq \
         cyrus-sasl \
-        libcurl \
         mosquitto-libs \
         libev \
     && apk add --no-cache --virtual .build-deps \
@@ -157,7 +167,6 @@ RUN set -x \
         lua-dev \
         musl-dev \
         cyrus-sasl-dev \
-        curl-dev \
         mosquitto-dev \
         libev-dev \
     && : "---------- proj (for gis module) ----------" \
