--- a/1.x-centos7/Dockerfile
+++ b/1.x-centos7/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER mail@racktear.com
 RUN groupadd tarantool \
     && adduser -g tarantool tarantool
 
-ENV TARANTOOL_VERSION=1.10.3-1-gfc6d6a338 \
+ENV TARANTOOL_VERSION=1.10.3-33-gfd303466c \
     TARANTOOL_DOWNLOAD_URL=https://github.com/tarantool/tarantool.git \
     TARANTOOL_INSTALL_LUADIR=/usr/local/share/tarantool \
     CURL_REPO=https://github.com/curl/curl.git \
