--- a/2.x-centos7/Dockerfile
+++ b/2.x-centos7/Dockerfile
@@ -4,11 +4,9 @@ MAINTAINER mail@racktear.com
 RUN groupadd tarantool \
     && adduser -g tarantool tarantool
 
-ENV TARANTOOL_VERSION=2.2.1-3-g878e2a42c \
+ENV TARANTOOL_VERSION=2.3.0-90-g51d8e4c35 \
     TARANTOOL_DOWNLOAD_URL=https://github.com/tarantool/tarantool.git \
     TARANTOOL_INSTALL_LUADIR=/usr/local/share/tarantool \
-    CURL_REPO=https://github.com/curl/curl.git \
-    CURL_TAG=curl-7_65_1 \
     LUAROCKS_URL=https://github.com/tarantool/luarocks/archive/6e6fe62d9409fe2103c0fd091cccb3da0451faf5.tar.gz \
     LUAROCK_VSHARD_VERSION=0.1.9 \
     LUAROCK_CHECKS_VERSION=3.0.1 \
@@ -41,16 +39,19 @@ RUN set -x \
         lua \
         tar \
         zip \
+        zlib \
         unzip \
         libunwind \
         ca-certificates \
     && yum -y install \
         perl \
+        file \
         gcc-c++ \
         cmake \
         readline-devel \
         openssl-devel \
         libyaml-devel \
+        zlib-devel \
         lz4-devel \
         binutils-devel \
         ncurses-devel \
@@ -74,16 +75,6 @@ RUN set -x \
         make; \
         make install; \
         echo '/usr/local/lib' > /etc/ld.so.conf.d/local.conf; \
-        ldconfig ) \
-    && : "---------- curl ----------" \
-    && mkdir -p /usr/src/curl \
-    && git clone "$CURL_REPO" /usr/src/curl \
-    && (cd /usr/src/curl; \
-        git checkout "$CURL_TAG"; \
-        ./buildconf; \
-        ./configure --with-ssl --prefix "/usr/local"; \
-        make -j; \
-        make install; \
         ldconfig ) \
     && : "---------- gperftools ----------" \
     && yum install -y gperftools-libs \
@@ -133,16 +124,17 @@ RUN set -x \
     && rm -rf /usr/src/tarantool \
     && rm -rf /usr/src/go \
     && rm -rf /usr/src/icu \
-    && rm -rf /usr/src/curl \
     && : "---------- remove build deps ----------" \
     && yum -y remove \
         perl \
+        file \
         gcc-c++ \
         cmake \
         readline-devel \
         openssl-devel \
         libyaml-devel \
         lz4-devel \
+        zlib-devel \
         binutils-devel \
         ncurses-devel \
         lua-devel \
